--- a/SerialCommunicator/Controls/SerialMessage.xaml
+++ b/SerialCommunicator/Controls/SerialMessage.xaml
@@ -10,9 +10,7 @@
              xmlns:viewmodels="clr-namespace:SerialCommunicator.ViewModels"
              mc:Ignorable="d" ToolTip="{Binding Time, StringFormat='hh:mm:ss tt'}">
     <Grid>
-        <TextBlock Text="{Binding CountIndex}" Margin="2,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="20"/>
-        <Separator Style="{DynamicResource VerticalSeparator}" Margin="24,2,0,2" Width="1" HorizontalAlignment="Left"/>
-        <Grid Margin="27,0,0,0">
+        <Grid>
             <TextBlock Text="{Binding RXorTX}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0"/>
             <TextBlock Text=">" VerticalAlignment="Center" Margin="36,3,0,5" HorizontalAlignment="Left" Width="8" TextAlignment="Center"/>
             <TextBox Text="{Binding Message}"
