--- a/SerialCommunicator/App.xaml
+++ b/SerialCommunicator/App.xaml
@@ -2,12 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SerialCommunicator"
-             StartupUri="MainWindow.xaml" ShutdownMode="OnMainWindowClose">
+             Startup="Application_Startup" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Themes/DarkTheme.xaml"/>
-                
+                <ResourceDictionary Source="/Themes/ColourfulDarkTheme.xaml"/>
                 <ResourceDictionary Source="/Themes/GraphStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
